--- a/UTS_AVD.ipynb
+++ b/UTS_AVD.ipynb
@@ -13,6 +13,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# **Case Study Unsupervised Learning Menggunakan Dataset Sales**"
+      ],
+      "metadata": {
+        "id": "hZMNk79j8sYs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "**1. Import Library & Load Data**\n",
         "\n"
       ],
