--- a/UTS_AVD.ipynb
+++ b/UTS_AVD.ipynb
@@ -32,7 +32,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Import library yang dibutuhkan\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
@@ -41,14 +40,13 @@
         "from sklearn.cluster import KMeans, AgglomerativeClustering\n",
         "from scipy.cluster.hierarchy import dendrogram, linkage\n",
         "\n",
-        "# Mount Google Drive\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
         "\n",
-        "# Load dataset\n",
-        "data = pd.read_csv('/content/drive/MyDrive/Sales_Dataset.csv')  # Ganti path jika diperlukan\n",
         "\n",
-        "# Tampilkan 5 data teratas dan informasi umum\n",
+        "data = pd.read_csv('/content/drive/MyDrive/Sales_Dataset.csv')\n",
+        "\n",
+        "\n",
         "print(data.head())\n",
         "print(data.info())\n"
       ],
@@ -57,9 +55,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YK8TgG11RHCf",
-        "outputId": "6caa0cd7-ad95-4600-f11d-481624560292"
+        "outputId": "89ba5e53-93e7-447a-edd0-0c53a40ba3c5"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -124,20 +122,15 @@
     {
       "cell_type": "code",
       "source": [
-        "# Pilih fitur yang akan digunakan untuk clustering\n",
-        "# Pastikan nama kolom sesuai dengan dataset Anda dengan melihat output dari print(data.columns)\n",
-        "# Jika nama kolom berbeda, sesuaikan di sini\n",
-        "# Ubah fitur yang digunakan, hanya gunakan 'Amount' karena 'Order ID' adalah string\n",
-        "fitur = data[['Amount']]  # Hanya gunakan 'Amount'\n",
+        "fitur = data[['Amount']]\n",
         "\n",
-        "# Periksa apakah kolom ada di dalam dataset\n",
         "print(data.columns)\n",
         "\n",
-        "# Standardisasi fitur\n",
+        "\n",
         "scaler = StandardScaler()\n",
         "fitur_scaled = scaler.fit_transform(fitur)\n",
         "\n",
-        "# Cek hasil standardisasi\n",
+        "\n",
         "print(fitur_scaled[:5])"
       ],
       "metadata": {
@@ -145,9 +138,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9b45ksqzSyM4",
-        "outputId": "b661696e-25c3-471a-8ea1-986224bf17a6"
+        "outputId": "f057c286-ebf0-4c7b-c008-bf47fffc1b85"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -187,7 +180,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Menentukan jumlah cluster optimal dengan Elbow Method\n",
         "wcss = []\n",
         "for i in range(1, 11):\n",
         "    kmeans = KMeans(n_clusters=i, random_state=42)\n",
@@ -203,7 +195,7 @@
         "plt.grid(True)\n",
         "plt.show()\n",
         "\n",
-        "# Jalankan K-Means dengan jumlah cluster terbaik (misalnya 3)\n",
+        "# mejalankan K-Means dengan jumlah cluster terbaik (misalnya 3)\n",
         "kmeans = KMeans(n_clusters=3, random_state=42)\n",
         "data['KMeans_Cluster'] = kmeans.fit_predict(fitur_scaled)\n"
       ],
@@ -213,9 +205,9 @@
           "height": 487
         },
         "id": "fxTbzpEITr6D",
-        "outputId": "53317406-015b-4182-86b9-5b98a45365a0"
+        "outputId": "0cae986a-f443-41ac-8dc3-90d62ca58ff6"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -269,7 +261,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Buat linkage matrix\n",
+        "# membuat linkage matrix\n",
         "linked = linkage(fitur_scaled, method='ward')\n",
         "\n",
         "# Plot dendrogram\n",
@@ -280,19 +272,19 @@
         "plt.ylabel('Jarak')\n",
         "plt.show()\n",
         "\n",
-        "# Lakukan Agglomerative Clustering (misalnya 3 cluster)\n",
+        "# melakukan Agglomerative Clustering (misalnya 3 cluster)\n",
         "hierarchical = AgglomerativeClustering(n_clusters=3)\n",
         "data['Hierarchical_Cluster'] = hierarchical.fit_predict(fitur_scaled)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 511
+          "height": 491
         },
         "id": "a4rDskrPUHvv",
-        "outputId": "dece827e-96e7-4aa1-c54c-d12556f94308"
+        "outputId": "8abadff5-2e54-4688-eb0e-8d19e4a6b9d2"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -336,13 +328,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# Reduksi dimensi ke 2D dengan PCA\n",
-        "# Ubah n_components menjadi 1 karena hanya ada 1 fitur\n",
         "pca = PCA(n_components=1)\n",
         "pca_result = pca.fit_transform(fitur_scaled)\n",
         "data['PCA1'] = pca_result[:, 0]\n",
-        "# Hapus PCA2 karena hanya ada 1 komponen utama\n",
-        "# data['PCA2'] = pca_result[:, 1]\n",
+        "\n",
         "\n",
         "# Plot hasil PCA dengan KMeans - Sesuaikan dengan 1 dimensi\n",
         "plt.figure(figsize=(8,6))\n",
@@ -357,9 +346,9 @@
           "height": 564
         },
         "id": "kSM4LEj2UTAA",
-        "outputId": "6f98e878-3d0b-424a-c1ce-f558f02fa74d"
+        "outputId": "477a9688-6294-44da-a16d-e1bc5c23390b"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
