--- a/UTS_AVD.ipynb
+++ b/UTS_AVD.ipynb
@@ -22,6 +22,17 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Nama: Selvi Sahrena\n",
+        "\n",
+        "NIM: 221031068"
+      ],
+      "metadata": {
+        "id": "L26MT5mWo7ZD"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "**1. Import Library & Load Data**\n",
         "\n"
       ],
@@ -57,7 +68,7 @@
         "id": "YK8TgG11RHCf",
         "outputId": "89ba5e53-93e7-447a-edd0-0c53a40ba3c5"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,7 +151,7 @@
         "id": "9b45ksqzSyM4",
         "outputId": "f057c286-ebf0-4c7b-c008-bf47fffc1b85"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -207,7 +218,7 @@
         "id": "fxTbzpEITr6D",
         "outputId": "0cae986a-f443-41ac-8dc3-90d62ca58ff6"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -284,7 +295,7 @@
         "id": "a4rDskrPUHvv",
         "outputId": "8abadff5-2e54-4688-eb0e-8d19e4a6b9d2"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -348,7 +359,7 @@
         "id": "kSM4LEj2UTAA",
         "outputId": "477a9688-6294-44da-a16d-e1bc5c23390b"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
